# PleGL

./: README.md  index.html  package-lock.json  package.json  vite.config.mjs
cpp/: CMakeLists.txt
cpp/include/: Brush.hpp  HistoryManager.hpp  Math.hpp  Mesh.hpp  PixRemesh.hpp  PrimitiveGenerator.hpp  SculptEngine.hpp
cpp/include/gpu/: ComputeBrush.hpp  GpuGlApi.hpp  GpuMeshBuffer.hpp
cpp/shaders/: BrushCompute.comp  NormalCompute.comp
cpp/src/: Brush.cpp  HistoryManager.cpp  Mesh.cpp  PixRemesh.cpp  PrimitiveGenerator.cpp  SculptEngine.cpp  bindings.cpp
cpp/src/gpu/: ComputeBrush.cpp  GpuMeshBuffer.cpp
cpp/tests/: core_smoke.cpp
docs/: instant-meshes-experiment.md
public/wasm/: sculpt-engine.wasm
scripts/: build-wasm.mjs  check-brush-performance.ts  check-cpp-core.mjs  check-multires-levels.ts  check-quad-neighbors.ts  check-quad-sphere.ts  run-instant-meshes.mjs
src/: main.ts  styles.css
src/core/: App.ts  CameraController.ts  MeshFactory.ts  MeshManager.ts  MeshView.ts  SceneManager.ts  SceneObject.ts  TransformGizmo.ts
src/io/: ObjIO.ts
src/primitives/: QuadSpherePrimitive.ts
src/sculpt/: Brush.ts  BrushEngine.ts
src/sculpt/brushes/: ClayBrush.ts  DrawBrush.ts  MoveBrush.ts  SmoothBrush.ts
src/ui/: LayerPanel.ts  ShortcutManager.ts  UIManager.ts
src/utils/: GeometryUtils.ts
src/wasm/: SculptEngine.ts
